tests/test_input_files/good/test_good_if_stmt_1.punkt
main {
    if true {
        println "hello".
    }

    if false {
        println "good bye".
    }
}
