tests/test_input_files/bad/test_bad_if_stmt_1.punkt
main {
	if 1 + 1 {
		print "hello".
	}
}
